--- a/html/login.html
+++ b/html/login.html
@@ -34,8 +34,8 @@
                     <!-- tab -->
                     <div class="header_2">
                         <ul>
-                            <li>이용안내</li>
-                            <li>구독권</li>
+                            <li onclick="location.href='./information.html'">이용안내</li>
+                            <li onclick="location.href='./subscription.html'">구독권</li>
                         </ul>
                     </div>
 
@@ -69,7 +69,7 @@
                         <img src="../images/etc/logo.svg" alt="보마로고">
                         <ul>
                             <li><strong>회사소개</strong></li>
-                            <li class="blue"><strong>이용정책</strong></li>
+                            <li class="blue" onclick="location.href='./terms.html'"><strong>이용정책</strong></li>
                         </ul>
                     </div>
                     <div>
