--- a/html/terms.html
+++ b/html/terms.html
@@ -257,7 +257,7 @@
                                     </div>
                                     <div class="mb12 terms_cnt_03">
                                         <h4>제3조 (회사정보 등의 제공)</h4>
-                                        <p class="mb8">회사는 다음 각 호의 사항을 서비스 초기 화면이나 홈페이지 (<span class="blue">www.voma.co.kr</span>) 에 게시하여, 회원이 이를 쉽게 알 수 있도록 합니다. <br/> 다만, 개인정보취급방침, 약관 및 운영정책은 회원이 연결화면을 통하여 볼 수 있도록 할 수 있습니다.</p>
+                                        <p class="mb8">회사는 다음 각 호의 사항을 서비스 초기 화면이나 홈페이지 (<a href="#"><span class="blue">www.voma.co.kr</span></a>) 에 게시하여, 회원이 이를 쉽게 알 수 있도록 합니다. <br/> 다만, 개인정보취급방침, 약관 및 운영정책은 회원이 연결화면을 통하여 볼 수 있도록 할 수 있습니다.</p>
                                         <ul class="num2">
                                             <li>전화번호, 전자우편주소</li>
                                             <li>개인정보 처리방침</li>
@@ -268,7 +268,7 @@
                                     <div class="mb24 terms_cnt_04">
                                         <h4>제4조 (약관의 명시, 효력 및 개정)</h4>
                                         <ul class="num">
-                                            <li>회사는 본 약관의 내용을 회원이 알 수 있도록 서비스 초기 화면이나 홈페이지(<span class="blue">www.voma.co.kr</span>)에 게시하거나 연결화면을 제공하는 방법으로 회원에게 공지합니다.</li>
+                                            <li>회사는 본 약관의 내용을 회원이 알 수 있도록 서비스 초기 화면이나 홈페이지(<a href="#"><span class="blue">www.voma.co.kr</span></a>)에 게시하거나 연결화면을 제공하는 방법으로 회원에게 공지합니다.</li>
                                             <li>회사는 회원이 회사와 본 약관의 내용에 관하여 질의 및 응답을 할 수 있도록 조치를 취합니다.</li>
                                             <li>회사는 서비스 및 솔루션을 이용하고자 하는 자(이하 ‘이용자’)가 약관의 내용을 쉽게 알 수 있도록 작성하고 약관에 동의하기에 앞서 약관에 표시하거나 별도의 연결화면 등을 통하여 회원이 알아보기 쉽게 처리합니다.</li>
                                             <li>회사는 「전사상거래 등에서의 소비자보호에 관한 법률」, 「약관의 규제에 관한 법률」, 「게임산업진흥에 관한 법률」, 「정보통신망이용촉진 및 정보보호 등에 관한 법률」, 「콘텐츠산업진흥법」 등 관련 법령에 위배하지 않는 범위에서 이 약관을 개정할 수 있습니다.</li>
